# gst-plugin-subsink

./: Makefile.am  configure.ac  gst-plugin-subsink.bb
src/: Makefile.am  gstsubsink.c  gstsubsink.h
